# chimera

./: .gitignore  Cargo.toml
crates/chimera_core/: Cargo.toml
crates/chimera_core/benches/: collision_map.rs  collision_map_get.rs
crates/chimera_core/src/: board.rs  collision_map.rs  data.rs  header.rs  lib.rs  piece.rs  placement.rs  queue.rs  render.rs  rotation.rs  score.rs  spin.rs  vector.rs
crates/chimera_nav/: Cargo.toml
crates/chimera_nav/benches/: collision_map.rs  collision_map_get.rs
crates/chimera_nav/src/: buffer.rs  collision_map.rs  detect.rs  global.rs  instant.rs  lib.rs  render.rs
crates/chimera_perft/: Cargo.toml
crates/chimera_perft/benches/: perft.rs
crates/chimera_perft/src/: main.rs
crates/chimera_search/: Cargo.toml
crates/chimera_search/src/: bag.rs  lib.rs  main.rs  score.rs
